--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,16 @@
 </head>
 <body>
 	<nav>
+		<%= admins_only do %>
+			<%= link_to "Admin", admin_root_path %><br>
+		<% end %>
+
 		<% if user_signed_in? %>
 			Signed in as <%= current_user.email %>
 		<% else %>
 			<%= link_to "Sign up", new_user_registration_path %>
 		<% end %>
+		
 		<%= link_to "Sign in", new_user_session_path %>
 	</nav>
 
